k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  namespace: otus-ms-hw-mn
  labels:
    app: monitoring-app
spec:
  selector:
    app: monitoring-app
  ports:
    - name: metrics
      port: 8090
      protocol: TCP
      targetPort: 8090
  type: NodePort
